--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
+  "exclude": ["test"],
   "compilerOptions": {
     /* Basic Options */
     "incremental": true,
     "target": "es6",
     "module": "commonjs",
-    "rootDir": "./",
+    "rootDir": "./src",
     "outDir": "./build",
+    "tsBuildInfoFile": "./build/tsconfig.build.tsbuildinfo",
 
     /* Strict Type-Checking Options */
     "strict": true,
