updated npm config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "rootDir": "./src",
     "outDir": "./build",
     "tsBuildInfoFile": "./build/tsconfig.build.tsbuildinfo",
+    "declaration": true,
 
     /* Strict Type-Checking Options */
     "strict": true,
