--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "open3d",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Open3d is a 3d geometry library for javascript.",
-  "main": "index.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "homepage": "https://github.com/ccc159/open3d",
   "scripts": {
     "doc": "typedoc&&serve docs -l 8081",
