--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "exclude": ["test"],
+  "exclude": ["node_modules", "test", "dist", "**/*test.ts"],
   "compilerOptions": {
     /* Basic Options */
     "incremental": true,
     "target": "es6",
     "module": "commonjs",
     "rootDir": "./src",
-    "outDir": "./build",
-    "tsBuildInfoFile": "./build/tsconfig.build.tsbuildinfo",
+    "outDir": "./dist",
+    "tsBuildInfoFile": "./dist/tsconfig.build.tsbuildinfo",
     "declaration": true,
 
     /* Strict Type-Checking Options */
