--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "homepage": "https://github.com/ccc159/open3d",
   "scripts": {
     "doc": "typedoc&&serve docs -l 8081",
+    "lint": "eslint src/**/*.ts",
+    "format": "eslint src/**/*.ts --fix",
     "build": "webpack&&typedoc",
     "test": "jest"
   },
@@ -32,6 +34,9 @@
   "devDependencies": {
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.29.0",
     "jest": "^28.1.1",
     "serve": "^13.0.2",
     "ts-jest": "^28.0.4",
