added husky to run linter and tests before commitments and pushes

--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "build": "webpack&&typedoc",
     "test": "jest"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint & yarn style",
+      "pre-push": "yarn test"
+    }
+  },
   "keywords": [
     "geometry",
     "3d",
@@ -39,6 +45,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.29.0",
     "eslint-plugin-jest": "^27.1.6",
+    "husky": "^8.0.2",
     "jest": "^28.1.1",
     "prettier": "^2.8.0",
     "serve": "^13.0.2",
