--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
   },
   "bugs": {
     "url": "https://github.com/ccc159/open3d/issues",
-    "email": "mail@chenjingcheng.com"
+    "email": "mail@jchen.ch"
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.41",
-    "jest": "^28.1.1",
-    "serve": "^13.0.2",
-    "ts-jest": "^28.0.4",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.8.1",
-    "typedoc": "^0.22.17",
-    "typescript": "^4.7.3",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2"
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.5",
+    "jest": "^29.4.3",
+    "serve": "^14.2.0",
+    "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.26",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
