--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "author": {
     "name": "Jingcheng Chen",
-    "email": "mail@chenjingcheng.com",
+    "email": "mail@jchen.ch",
     "url": "https://chen.works/"
   },
   "repository": {
