updated action script

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
-      - name: Yarn Test
-        run: yarn test
+          node-version: '18'
+          cache: 'yarn'
+      - run: yarn
+      - run: yarn test
